# play-llamaindex

./: .gitignore  README.md  api_query.py  pyproject.toml  sample.env  simple_query.py
